trying to fix about image on mobile

--- a/app.css
+++ b/app.css
@@ -175,7 +175,8 @@ h1 {
   .project-image, .cert-image {
     max-width: 100%;
     min-width: 300px;
-    height: auto;
+    /* height: auto; */
+    height: 100px;
   }
 }
 
